src/megaman/assets/styles/mega-man.css
.mega-man {
  --mega-man-width: 32px;
  --mega-man-height: 32px;

  --positionX: 0px;
  --positionY: 0px;
  --direction: 1;

  --spawnAnimationStartPositionX: 0px;
  --spawnAnimationStartPositionY: -224px;

  --backgroundPositionX: var(--spawnAnimationStartPositionX);
  --backgroundPositionY: var(--spawnAnimationStartPositionY);

  /* 0 (idle), 1 (blink) */
  --idle-state: 0;
  /* 0 (idle), 1 - 2 (spawning) */
  --spawn-state: 0;
  /* 0 (idle), 1 (knee bend), 2 - 4 (walking) */
  --walk-state: 0;
  /* 0 (idle), 1 (jumping) */
  --jump-state: 0;
  /* 0 (idle), 1 (sliding) */
  --slide-state: 0;
  /* 0 (none), 1 (idle), 2 - 4 (walking) */
  --attack-state: 0;
  /* 0 (none), 1 - 3 (low), 4 - 6 (max) */
  --charge-state: 0;

  /* Sprite Initialization */
  width: var(--mega-man-width);
  height: var(--mega-man-height);
  visibility: hidden;
  background-image: url('../images/megaman-animations.png');
  background-position: var(--backgroundPositionX) var(--backgroundPositionY);
  background-repeat: no-repeat;

  /* Position, Movement, and Scale */
  transform: translate(var(--positionX), var(--positionY)) scale(calc(var(--direction) * 4), 4);
  transform-origin: center;
  position: absolute;

  /* Collision Box Alignment */
  display: flex;
  justify-content: center;
  align-items: end;
}

.mega-man[jumping] {
  align-items: start; /* Shifts collision box up when jumping */
  --jump-state: 10;
}

.mega-man[sliding] {
  --slide-state: 12;
}

.mega-man > .mega-man-collision {
  width: calc(var(--mega-man-width) * 0.75);
  height: calc(var(--mega-man-height) * 0.75);
}

.mega-man[sliding] > .mega-man-collision {
  height: calc(var(--mega-man-height) * 0.65); /* Shortens collision box when sliding */
}

/* Animation */
.mega-man.spawn-animation-state {
  --backgroundPositionX: var(--spawnAnimationStartPositionX);
  --backgroundPositionY: var(--spawnAnimationStartPositionY);

  animation: spawnAnimation 0.1s steps(1, end) infinite;
}

@keyframes spawnAnimation {
  0% {
    background-position: calc((var(--spawn-state) * -32px)) -224px;
  }
}

.mega-man.base-animation-state {
  --backgroundPositionX: 0px;
  --backgroundPositionY: 0px;

  animation: baseAnimation 0.1s steps(1, end) infinite;
}

@keyframes baseAnimation {
  0% {
    --backgroundPositionX: calc(
      (
          var(--idle-state) + var(--walk-state) + var(--jump-state) + var(--slide-state) +
            var(--attack-state)
        ) *
        -32px
    );
    --backgroundPositionY: calc(var(--charge-state) * -32px);
  }
}

